opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/iron"
bug-reports: "https://github.com/janestreet/iron/issues"
dev-repo: "git+https://github.com/janestreet/iron.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "iron" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "async_extended"
  "async_interactive"
  "command_rpc"
  "core"
  "core_extended"
  "expect_test_helpers"
  "incremental"
  "jbuilder"                {build & >= "1.0+beta8"}
  "patdiff"
  "patience_diff"
  "ppx_driver"
  "ppx_jane"
  "re2"
  "textutils"
  "topological_sort"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Code review system.

Iron is a code review system.
"
